--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit==1.24.1
 streamlit-drawable-canvas==0.9.3
-torch == 1.13.1
-torchvision==0.13.1
+torch
+torchvision
 pandas==1.5.3
 pillow==9.5.0
 opencv-python==4.7.0.68
